--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -143,11 +143,12 @@ month={Nov}
   howpublished = {\url{https://www.riskiq.com/press-release/riskiq-reports-malicious-mobile-apps-google-play-have-spiked-nearly-400/}},
   note = {Accessed: 2018-04-22}
 }
-@book{trinius2010visualisierung,
+@misc{trinius2010visualisierung,
   title={Visualisierung von Malware-Verhalten},
   author={Trinius, Philipp},
   year={2010},
-  publisher={Universit{\"a}tsbibliothek Dortmund}
+   howpublished = {\url{https://www1.cs.fau.de/filepool/publications/trinius_myphd_abstract.pdf}},
+   note = {Accessed: 2018-05-29}
 }
 
 @misc{AndoidMarktanteil,
@@ -163,7 +164,7 @@ month={Nov}
 }
 
 @article{scheid2012kapitel,
-  title={Kapitel 1 Sicherheit mobiler Ger{\"a}te-Schutzma{\ss}nahmen, Angriffsarten \& Angriffserkennung auf Android},
+  title={Sicherheit mobiler Ger{\"a}te-Schutzma{\ss}nahmen, Angriffsarten \& Angriffserkennung auf Android},
   author={Scheid, Julian},
   journal={Ausgew{\"a}hlte Themen der IT-Sicherheit},
   pages={7},
@@ -187,5 +188,90 @@ month={Nov}
   howpublished = {\url{https://developer.android.com/training/permissions/requesting.html}},
   note = {Accessed: 2018-04-25}
 }
+
+@book{gargenta2011einfuhrung,
+  title={Einf{\"u}hrung in die Android-Entwicklung},
+  author={Gargenta, Marko},
+  year={2011},
+  publisher={O'Reilly Germany},
+  url = {https://books.google.de/books?hl=de&lr=&id=34S3Jt1ONTkC&oi=fnd&pg=PR5&dq=android	+architektur&ots=Hm7wBINdJG&sig=620owrYAI_6HXB7XDZjvfRM59KE#v=onepage&q&f=false}
+  
+  
+}
+
+@misc{Dalvik,
+  title = {ART vs. Dalvik},
+  howpublished = {\url{http://www.areamobile.de/specials/26470-art-vs-dalvik-im-test-die-neue-android-runtime-im-vergleich}},
+  note = {Accessed: 2018-05-28}
+}
+
+@misc{dynamische_analyse,
+  title = {dynamische Analyse},
+  howpublished = {\url{https://www.informatik.uni-bremen.de/st/lehre/re10/dynamische_analyse.pdf}},
+  note = {Accessed: 2018-05-28}
+}
+
+@Article{Lehner2006,
+author="Lehner, Marcel
+and Hermann, Eckehard",
+title="Auffinden von verschleierter Malware",
+journal="Datenschutz und Datensicherheit - DuD",
+year="2006",
+month="Dec",
+day="01",
+volume="30",
+number="12",
+pages="768--772",
+abstract="Malware-Autoren setzen zunehmend Verschleierungsmechanismen wie Komprimierung, Verschl{\"u}sselung oder sich selbst modifizierenden Programmcode ein, welche das Auffinden der Malware durch herk{\"o}mmliche Virenerkennungsverfahren wie zum Beispiel die signaturbasierte Suche sehr m{\"u}hsam und teilweise sogar erfolglos erscheinen lassen. Ein erfolgversprechender Ansatz, um auch unbekannte Viren, W{\"u}rmer oder Trojaner zu erkennen, ist die heuristische Analyse",
+issn="1862-2607",
+doi="10.1007/s11623-006-0237-8",
+url="https://doi.org/10.1007/s11623-006-0237-8"
+}
+
+@inproceedings{ernst2003static,
+  title={Static and dynamic analysis: Synergy and duality},
+  author={Ernst, Michael D},
+  booktitle={WODA 2003: ICSE Workshop on Dynamic Analysis},
+  pages={24--27},
+  year={2003}
+}
+
+@Article{Benzmüller2018,
+author="Benzm{\"u}ller, Ralf",
+title="Machine Learning und Virenschutz",
+journal="Datenschutz und Datensicherheit - DuD",
+year="2018",
+month="Apr",
+day="01",
+volume="42",
+number="4",
+pages="224--230",
+abstract="Die Erkennung und Abwehr von Schadprogrammen hat {\"u}ber die Jahrzehnte immer mehr Bedeutung gewonnen. Im Laufe der Zeit wurden zahlreiche Schutztechnologien entwickelt. Auch die K{\"u}nstliche Intelligenz und Maschinelles Lernen werden erfolgreich eingesetzt. Welche Chancen bieten sie und wo sind ihre Grenzen?",
+issn="1862-2607",
+doi="10.1007/s11623-018-0912-6",
+url="https://doi.org/10.1007/s11623-018-0912-6"
+}
+
+@INPROCEEDINGS{7365827,
+author={J. Yousefi and Y. Sedaghat and M. Rezaee},
+booktitle={2015 5th International Conference on Computer and Knowledge Engineering (ICCKE)},
+title={Masking wrong-successor Control Flow Errors employing data redundancy},
+year={2015},
+volume={},
+number={},
+pages={201-205},
+keywords={CMOS digital integrated circuits;errors;integrated circuit reliability;redundancy;CMOS technology;MiBench package;control flow errors;control variable determination;data redundancy;fault injection control;traditional fault masking technique;transient faults;transistor size reduction;wrong successor CFE;wrong-successor control flow error masking;Performance evaluation;Reliability;Control variables;Error correction;Wrong-successor control flow error;fault masking},
+doi={10.1109/ICCKE.2015.7365827},
+ISSN={},
+month={Oct}
+}
+
+@misc{Kontrollflussgraph,
+  title = {Überdeckungsmaße},
+  howpublished = {\url{http://home.edvsz.fh-osnabrueck.de/skleuker/CSI/Methoden/kombiquUeberdeckung.html}},
+  note = {Accessed: 2018-05-29}
+}
+
+
 
 
