--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -236,7 +236,7 @@ url="https://doi.org/10.1007/s11623-006-0237-8"
   year={2003}
 }
 
-@Article{Benzmüller2018,
+@Article{Benzmueller2018,
 author="Benzm{\"u}ller, Ralf",
 title="Machine Learning und Virenschutz",
 journal="Datenschutz und Datensicherheit - DuD",
@@ -272,6 +272,22 @@ month={Oct}
   note = {Accessed: 2018-05-29}
 }
 
+@article{bierbaummalicious,
+  title={Malicious Code: Code Obfuscation},
+  author={Bierbaum, Simon},
+  howpublished = {\url{https://www7.in.tum.de/um/courses/seminar/worm/WS0405/bierbaum.pdf}},
+  note = {Accessed: 2018-05-31}
+}
 
+@misc{behavior-blocker,
+  title = {What is a Behavior Blocker?},
+  howpublished = {\url{https://www.welivesecurity.com/2006/09/11/what-is-a-behavior-blocker/}},
+  note = {Accessed: 2018-05-31}
+}
 
-
+@misc{entpackermalware,
+  title={Malware-Techniken und Malware-Analyse [MM-108]},
+  author={Entpacker-Stub, Header},
+  howpublished = {\url{https://www1.informatik.uni-erlangen.de/filepool/projects/openc3s/mm-Malware.pdf}},
+  note = {Accessed: 2018-05-31}
+}
