--- a/term-paper-template-master/tex/seminararbeit.tex
+++ b/term-paper-template-master/tex/seminararbeit.tex
@@ -63,8 +63,28 @@ Standardmäßig hat eine Applikation keinen Zugriff auf Daten außerhalb der San
 Anders als bei IOS, bei welchem die Nutzer an den Apple Store gebunden sind, können die Android Benutzer selbst entscheiden welchen Store sie verwenden. Der Google Play Store ist mit 82 Milliarden Downloads  \cite{GooglePlayDownloads} mit Abstand die größte Plattform. Er wurde am 28. August 2008 unter dem Namen Android Market veröffentlicht. Dieser bietet den Nutzern einfaches herunterladen und installieren von mobilen Anwendungen, sogenannten Applikationen. Im Google Play Store sind inzwischen über 3,7 Millionen Anwendungen  bereit zum Herunterladen \cite{Apps} und jeden Monat kommen ca. 30.000 neue Applikationen hinzu \cite{bartsch2014zertifizierte}. Durch den rasanten Wachstum steigt auch die Anzahl von schädlicher Software, sogenannter Malware. Der Anteil von bösartigen Applikationen ist von 2011 bis 2013 um 388\% gewachsen \cite{RiskIQ}. Da nicht alle Anwendungen von Mitarbeitern geprüft werden können, hat Google das Programm Bouncer ins Leben gerufen (siehe Kapitel \ref{sec:Bouncer}).
 Android bietet zudem die Möglichkeit per Remote-Verbindung Applikationen zu installieren und zu löschen. Hierfür braucht man lediglich Zugriff auf den Google Play Account. Falls ein Angreifer an diese Daten kommen sollte, könnte er ohne Erlaubnis des Nutzers, Applikationen aus dem Google Play Store auf dem Smartphone installieren.
 
-\subsection{Malware}
-Bei dem Begriff Malware handelt es sich um ein Kunstwort, welches sich aus malicous und software zusammensetzt und bezeichnet Programme, welche unerwünschte oder auch schädliche Funktionen ausführen. Maleware kann man prinzipiell in drei unterschiedliche Hauptkathegorien unterteillen, Viren, Würmer und Trojaner. Ein Virus ist eine Software, welche sich selbst vervielfälltigen kann. Durch das Ausführen einer Infizierten Anwendung wird das Programm gestartet und schleust sich in anderen Programmen oder Dokumenten ein. Die sogenannten Würmer haben ähnliche Eigenschaften wie Vieren, der Hauptunterschied liegt darin, dass sie sich über das Intra- order Internet vermehren können und oft keine Interaktion mit den betroffenen Benutzern benötigen. Die dritte und gefährlichste Kathegorie ist das sogenannte Trojanische Pferd. Dieses täuscht dem Nutzer ein nützliches Programm vor, führt allerdings ohne Wissen des Benutzers im Hintergrund schädliche Funktionen und Routinen durch. Allerdings enthält die meiste Malware mehr als nur eine schädliche Funktion, was eine eindeutige Klassifikation fast unmöglich macht. Weitere Arten sind zudem Spyware, Exploits, Backdoors und Rootkits. Jede dieser Arten kann von ihren Maleware-Authoren druch Verschleierungsmechanismen wie Komprimierung, Verschlüsselung oder sich selbst modifizierender Programmcode verschleiert werden, was das Auffinden durch Vierenprogramme um einiges erschwert. \cite{Lehner2006} Malware stellt desshalb eine immer größer werdende Bedrohung dar und durch den rasanten Wachstum ist eine manuelle Auswertung mittlerweile unmöglich geworden. Obwohl es sich bei vielen neuen Arten um verschiedene Varianten bereits bekannter Malware handelt, müssen Analysten erst jedes Sample erneut analysieren um dies feststellen zu können \cite{trinius2010visualisierung}. Bei der Analyse kann grundsätzlich in zwei Arten unterschieden werden: Statische und Dynamische Analyse (siehe Kapitel \ref{sec:Statische Analyse} und \ref{sec:Dynamische Analyse}).
+\subsection{Malware} \label{sec:Malware}
+Bei dem Begriff Malware handelt es sich um ein Kunstwort, welches sich aus malicous und software zusammensetzt und bezeichnet Programme, welche unerwünschte oder auch schädliche Funktionen ausführen. Maleware kann man prinzipiell in drei unterschiedliche Hauptkathegorien unterteillen, Viren, Würmer und Trojaner. Ein Virus ist eine Software, welche sich selbst vervielfälltigen kann. Durch das Ausführen einer Infizierten Anwendung wird das Programm gestartet und schleust sich in anderen Programmen oder Dokumenten ein. Die sogenannten Würmer haben ähnliche Eigenschaften wie Vieren, der Hauptunterschied liegt darin, dass sie sich über das Intra- order Internet vermehren können und oft keine Interaktion mit den betroffenen Benutzern benötigen. Die dritte und gefährlichste Kathegorie ist das sogenannte Trojanische Pferd. Dieses täuscht dem Nutzer ein nützliches Programm vor, führt allerdings ohne Wissen des Benutzers im Hintergrund schädliche Funktionen und Routinen durch. Allerdings enthält die meiste Malware mehr als nur eine schädliche Funktion, was eine eindeutige Klassifikation fast unmöglich macht. Weitere Arten sind zudem Spyware, Exploits, Backdoors und Rootkits. Jede dieser Arten kann von ihren Maleware-Authoren druch Verschleierungsmechanismen wie Komprimierung, Verschlüsselung oder sich selbst modifizierender Programmcode verschleiert werden, was das Auffinden durch Vierenprogramme um einiges erschwert. \cite{Lehner2006} Die erfolgreichsten und am meisten genutzten Arten sind dabei Code Obfuscation, Anti-Analyse, Laufzeitpacker, Polymorphie und Metamorphie. 
+
+\textbf{Code Obfuscation} bezeichnet dabei die Transformation des Quellcodes mit dem Ziel, die Ermittlung der Semantik und der Funktionalität zu erschweren ohne dabei die eigentliche Funktionalität des Programmes zu verändern \cite{bierbaummalicious}. Hierzu werden zum Beispiel leere Berechnungen eingebaut, Funktionen in viele kleine Teile aufgespalten oder Befehlsabfolgen kompliziert Reorganisiert. 
+
+\textbf{Anti-Analyse} beschreibt hingegen das torpedieren wichtiger Werkzeuge wie Disassembler, Debugger und Emulatoren welche für das erstellen von Control Flow-Graphen \ref{sec:Kontrollflussanalyse} gebraucht werden. 
+
+\textbf{Laufzeitpacker} sind Programme, welche den Programmcode komprimieren. Dies kann man sich ähnlich wie bei einem ZIP-Archiv vorstellen. Dies hat zur Folge, dass bei Ansicht des Programmcodes nur der Code des Packers sichtbar ist und nicht der Code der eigentlich ausgeführt wird.\cite{Benzmueller2018} Die Entschlüsselung der sogenannten Payload geschieht durch einen Decrypter zur Laufzeit. 
+
+\textbf{Polymorphie} hat die Bedeutung Vielgestaltigkeit. Sollte das Programm nun von einem Laufzeitpacker verschlüsselt worden sein aber nach jeder Replikation seinen Schlüssel zur Ver- und Entschlüsselung ändern, nennt man dies ein polymorphes Programm.
+Dieses Verfahren wird in Abbildung \ref{fig_Decrypter} gezeigt.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=8.5cm]{Decrypter}
+\caption{Polymorphie des Programmcodes ~\cite{entpackermalware}}
+\label{fig_Decrypter}
+\end{figure}
+
+\textbf{Metamorphie} hat die Bedeutung Verwandlung. Sollte nun nicht nur, wie in Abbildung \ref{fig_Decrypter} gezeigt ist, die Payload jedes mal geändert werden, sondern auch der Decrypter, spricht man von einem Methamorphosen Programm. Dies hat zur folge, dass der gesamte Quellcode nach jeder Replikation verändert ist. \cite{entpackermalware}
+ 
+Malware stellt wegen all dieser Verschleierungsmechanismen eine immer größer werdende Bedrohung dar und durch den rasanten Wachstum des Smartphone-Marktes ist eine manuelle Auswertung mittlerweile unmöglich geworden. Obwohl es sich bei vielen neuen Arten um verschiedene Varianten bereits bekannter Malware handelt, müssen Analysten erst jedes Sample erneut analysieren um dies feststellen zu können \cite{trinius2010visualisierung}. Bei der Analyse kann grundsätzlich in zwei Arten unterschieden werden: Statische und Dynamische Analyse (siehe Kapitel \ref{sec:Statische Analyse} und \ref{sec:Dynamische Analyse}).
 
 
 \subsection{Dynamische Analyse} \label{sec:Dynamische Analyse}
@@ -80,7 +100,7 @@ dabei erreichbar sind. Zudem wird überprüft welche Werte Parameter einer Funkt
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=5.5cm]{Kontrollflussgraph}
+\includegraphics[width=6.5cm]{Kontrollflussgraph}
 \caption{Kontrollflussgraph ~\cite{Kontrollflussgraph}}
 \label{fig_Kontrollflussgraph}
 \end{figure}
@@ -104,17 +124,21 @@ Die am meisten Vertretene Methode der Malwareerkennung ist die auf Signatur basi
 
 
 \subsection{Virenschutz durch Machine Learning}
-Glaubt man den Firmen , welche Machine Learning für ihr Virenerkennung einsetzten, so hat die traditionelle Malwareerkennung ein Ende gefunden. Mithilfe von 
+Glaubt man den Firmen , welche Machine Learning für ihr Virenerkennung einsetzten, so hat die traditionelle Malwareerkennung ein Ende gefunden. Sobald man sich mit Machine Learning auseinander setzt wird man auch auf den Begriff Künstliche Intelligenz stoßen. Dieser ist ein Teil des Forschnungsgebietets der Informatik. Allerdings ist Intelligenz nur mangelhaft definiert und somit lässt sich dieses Forschnungsgebietet nur so einschränken, dass es sich nicht um eine Abarbeitung festgelegter Befehlssequenzen handelt. Die Berücksichtigung weitere Merkmale wie zum Beispiel Verarbeitung von Sprache, Visuelle Erkennung, Kreativität, Schlussfolgern und allgemeine Lernfähigkeit hängen von der Sicht des Benutzers ab. Das Lernen in Machine Learning impliziert dabei, dass Informationen Rückmeldung von Außerhalb dazu führen, dass eine Aufgabe besser gelöst werden kann. Dabei spielen folgende drei Kernaufgaben des Machine Learnings eine große Rolle. Erstens, eine Vorhersage treffen, zweitens Ursache finden und verstehen und drittens Muster in meistens nicht sortierten Daten erkennen. Umso mehr Daten in der sogenannten Lernphase eingespielt werden, desto sicherer und höher ist die Erkennungsrate. Virenschutzprogramme mit Machine Learning verwenden zwei Ansetzte, die statische \ref{sec:Statische Analyse} und die dynamische Analyse  \ref{sec:Dynamische Analyse}. In der statischen Analyse wird der Inhalt, also der Quellcode eines Programmes bewertet, ähnlich wie bei der signaturbasierten Malwareerkennung. Bei der dynamischen Analyse wertet das Virenprogramm während der Laufzeit Informationen über Prozesse, Interprozesskommunikation, Dateisystemzugriffe,  Muster in der Netzwerkkommunikation und Aktionen in der Registry aus. Der Virenschutz durch Machine Learning hat allerdings die selben Probleme wie andere Malwareerkennungsmethoden. Die Malware entzieht sich der Entdeckung durch verschiedene Verschleierungsmethoden, welche in Abschnitt \ref{sec:Malware} beschrieben wurden. Zudem können Neuronale Netze eine Aussage nur mit einer gewissen wahrscheinlichkeit ermöglichen, daher kann keine 100 \%ige Erkennung garantiert werden. \cite{Benzmueller2018}
 
-\subsubsection{Data Flow}\label{sec:Data Flow}
+\subsection{Integritätsprüfung}
+Damit sich ein Virus verbreiten kann, muss er sich in andere Daten hineinkopieren und dabei Änderungen an dieser vornehmen. Ein Virenschutz kann diese Änderungen erkennen und somit auf eine Infizierung schließen. Dabei bildet der Virenschutz eine einmalige Checksumme über jede Datei des Systems und speichert diese in einer Datenbank. Sollte nun ein Virus eine Datei verändern ändert sich die Checksumme dieser Datei. Wir nun dieser unterschied einer Checksumme festgestellt kann mit einer hohen Sicherheit auf ein Virus geschlossen werden. Mit dieser Technik ist es möglich die Anwesenheit auch bisher unbekannte Malware festzustellen. Das große Problem ist dabei, dass nicht nur Malware, sondern auch der Nutzer, legale Programme oder auch Updates Daten auf dem System verändern können. Zudem wird die Malware erst bei der erneuten Prüfung einer Checksumme erkannt und bis zu diesem Zeitpunkt könnte die Schadfunktion schon ausgeführt worden sein. Somit liegt es in der Hand des Entwicklers und des Anwenders zu entscheiden welche Änderungen legal und welche es nicht sind. \cite{Lehner2006}
 
-\subsubsection{Control Flow}
+\subsection{Behavior Blocker}
+Beim Behavior-Blocking werden Dateiaktivitäten und deren Verhalten überwacht. Zuerst wird festgelegt welche Aktionen und Änderungen an Dateien erlaubt und welche verboten sind. Anschließen kann so überwacht werden, welches Programm gegen diese fest gelegten Regeln verstößt. Obwohl dies komplett in Echtzeit geschieht, kann bei einer Verhaltensanomalie nicht festgestellt werden, ob es sich tatsächlich um Malware handelt oder nur um eine ungewöhnliche, aber zulässige Aktion.\cite{Lehner2006} Vorteil dabei ist, dass unerlaubte Zugriffe sofort blockiert werden und somit keinen Schaden angerichtet werden kann. Nachteil dabei ist, dass viele nützliche Programme ebenfalls blockiert werden. Die Auswahl liegt also beim Nutzer, welche Aktionen er zulässt und welche nicht. \cite{behavior-blocker}
 
 \subsubsection{Taint Analysis}
 
 \section{Bouncer} \label{sec:Bouncer}
 
 \section{Fazit}
+Durch den rasanten Wachstum des Smartphone-Marktes und die Einbindung von Smartphones in die  kommerziellen Nutzung wird auch in der Zukunft dies ein attraktives Ziel für Angreifer bleiben. Daraus kann man schließen, dass immer komplexere und raffiniertere Verschleierungsmechanismen entwickelt werden. Da allerdings auch die Entwickler der Erkennungssoftware stets ihr Produkte weiterentwickeln, gibt es zum heutigen Entwicklungsstand keine Malware die absolut nicht erkennbar ist. Allerdings gibt es noch kein Erkennungsprogramm, welches in der Lage ist, alle der verschiedenen Verschleierungsmechanismen zu erkennen. Um ein möglichst sicheres Ergebnis zu erlangen müssen viele der hier vorgestellten Verfahren auf die zu untersuchende Software angewandt werden. Dies ist durch den rasanten Wachstum des App-Stores leider nicht möglich. Es gibt einige gute Ansätze, aber es wird immer Malware geben, welche aus Grund fehlender Zeit nicht entdeckt wird.
+
 
  %A = \ac{A} 
 
